# GalactiLog

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-compose.override.example.yml  docker-compose.yml  nginx.conf  setup.sh  supervisord.conf  uninstall.sh
backend/: alembic.ini  backfill_targets.py  celerybeat-schedule  entrypoint.sh  perf_test.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_create_base_tables.py  0001_add_quality_and_equipment_columns.py  0001_initial_schema.py  (+41 more)
backend/app/: cli.py  config.py  database.py  main.py  metrics.py
backend/tests/: conftest.py  container_perms.sh  test_activity_service.py  test_activity_startup.py  test_api_activity.py  test_api_backup.py  test_api_graph_settings.py  test_api_images.py  test_api_merge_preview.py  test_api_mosaic_panels.py  test_api_scan.py  test_api_session_detail_enriched.py  test_api_settings.py  test_api_target_detail.py  test_api_target_identity.py  test_api_targets.py  test_astro_night.py  test_auth.py  test_backfill_csv.py  test_backup_service.py  test_config.py  test_container_permissions.py  test_csv_metadata.py  test_data_migrations.py  test_filename_parser.py  test_filename_resolver.py  test_models.py  test_mosaic_composite.py  test_mosaic_detection.py  test_mosaic_session_membership.py  test_normalization.py  test_openngc.py  test_preview.py  test_preview_api.py  test_preview_cache.py  test_prune_activity.py  test_scan_filters.py  test_scan_filters_api.py  test_scan_state_emit.py  test_scanner.py  (+16 more)
(+302 files in other folders)
