[project]
name = "galactilog"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "fitsio>=1.2.0",
    "xisf>=0.9.5",
    "Pillow>=11.0.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "watchdog>=6.0.0",
    "pwdlib[argon2]>=0.2.0",
    "PyJWT>=2.9.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.9",
    "astropy>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
